--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
       let currColor = "#ff0000";
       let isPanning = false;
-      let rot = 0;
+      let rotation = 0;
       let panX = 0;
       let panY = 0;
       let zoom = 1;
@@ -156,13 +156,18 @@
         return Math.atan2(y2 - y1, x2 - x1);
       }
 
+      function rotCoords(x, z, rot = rotation) {
+        if (rot === 0) return { x: x, z: z };
+        else if (rot === 90) return { x: z, z: x * -1 };
+        else if (rot === 180) return { x: x * -1, z: z * -1 };
+        else if (rot === 270) return { x: z * -1, z: x };
+      }
+
       function worldCoords(screenX, screenY) {
-        const worldX = Math.round(((screenX - (innerWidth / 2 + panX * zoom)) / (50 * zoom) + (screenY - (innerHeight / 2 + panY * zoom)) / (25 * zoom)) / 2);
-        const worldZ = Math.round(((screenY - (innerHeight / 2 + panY * zoom)) / (25 * zoom) - (screenX - (innerWidth / 2 + panX * zoom)) / (50 * zoom)) / 2);
-        if (rot === 0) return { x: worldX, z: worldZ };
-        else if (rot === 90) return { x: worldZ, z: worldX * -1 };
-        else if (rot === 180) return { x: worldX * -1, z: worldZ * -1 };
-        else if (rot === 270) return { x: worldZ * -1, z: worldX };
+        return rotCoords(
+          Math.round(((screenX - (innerWidth / 2 + panX * zoom)) / (50 * zoom) + (screenY - (innerHeight / 2 + panY * zoom)) / (25 * zoom)) / 2),
+          Math.round(((screenY - (innerHeight / 2 + panY * zoom)) / (25 * zoom) - (screenX - (innerWidth / 2 + panX * zoom)) / (50 * zoom)) / 2)
+        );
       }
 
       function getCubeAt(x, y, z) {
@@ -186,8 +191,8 @@
       function deserialize(string, animate = true) {
         const cubeStrings = string.split(";");
         if (animate) {
-          cubeStrings.forEach((c, i) => setTimeout(() => placeCube(...c.split(","), true, false), 25 * i));
-          setTimeout(() => addHistory(), 25 * cubeStrings.length);
+          cubeStrings.forEach((c, i) => setTimeout(() => placeCube(...c.split(","), true, false), (200 / cubeStrings.length) * i));
+          setTimeout(() => addHistory(), 200);
         } else {
           cubeStrings.forEach((c, i) => placeCube(...c.split(","), true, false));
           addHistory();
@@ -300,10 +305,8 @@
               if (angle > -2.67785867 && angle < -0.46373398) newY++; //
               else if (angle > -0.46373398 && angle < 1.5708) newX++; // Unintentionally equal line widths lol
               else if (angle > 1.5708 || angle < -2.67785867) newZ++; //
-              if (rot === 0) placeCube(x + newX, y + newY, z + newZ);
-              else if (rot === 90) placeCube(x + newZ, y + newY, z + newX * -1);
-              else if (rot === 180) placeCube(x + newX * -1, y + newY, z + newZ * -1);
-              else if (rot === 270) placeCube(x + newZ * -1, y + newY, z + newX);
+              const rotated = rotCoords(newX, newZ);
+              placeCube(x + rotated.x, y + newY, z + rotated.z);
             } else if (e.button == 2) {
               breakCube(cube);
             } else if (e.button == 1) {
@@ -337,11 +340,11 @@
       }
 
       function rotate(angle) {
-        rot = Math.round(angle / 90) * 90;
-        if (rot >= 360 || rot < 0) rot -= Math.floor(rot / 360) * 360;
-        world.className = `world rot-${rot}`;
-        rotator.value = rot;
-        return rot;
+        rotation = Math.round(angle / 90) * 90;
+        if (rotation >= 360 || rotation < 0) rotation -= Math.floor(rotation / 360) * 360;
+        world.className = `world rot-${rotation}`;
+        rotator.value = rotation;
+        return rotation;
       }
       let downPos = { x: 0, y: 0 };
       view.addEventListener("pointerdown", (e) => {
@@ -404,11 +407,11 @@
         }
         if (e.code === "Comma") {
           e.preventDefault();
-          rotate(rot - 90);
+          rotate(rotation - 90);
         }
         if (e.code === "Period") {
           e.preventDefault();
-          rotate(rot + 90);
+          rotate(rotation + 90);
         }
       });
 
